--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"file-saver": "^2.0.5"
+	}
 }
