--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"file-saver": "^2.0.5"
-	}
+	"type": "module"
 }
