--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/postgres": "^0.3.2"
+	}
 }
