--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "^1.0.0-next.589",
+		"@tsconfig/svelte": "^5.0.0",
 		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"typescript": "^4.7.4",
+		"svelte-check": "^2.10.3",
+		"svelte-preprocess": "^5.0.4",
+		"typescript": "^4.9.5",
 		"vite": "^4.3.0"
 	},
 	"type": "module",
