--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/poppins": "^5.0.5",
-		"@vercel/analytics": "^1.0.1"
+		"@fontsource/poppins": "^5.0.5"
 	}
 }
