SCSS - added scss package - allows for usage of scss syntax in future development

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/poppins": "^5.0.5"
+		"@fontsource/poppins": "^5.0.5",
+		"sass": "^1.65.1"
 	}
 }
