--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.0.0-next.589",
 		"@tsconfig/svelte": "^5.0.0",
 		"svelte": "^3.44.0",
